--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "serve": "live-server public/",
-    "build": "webpack",
+    "build:dev": "webpack",
+    "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json"
   },
@@ -23,9 +24,11 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.4",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "live-server": "^1.2.0",
     "moment": "^2.22.2",
-    "node-sass": "^4.9.0",
-    "normalize.css": "^8.0.0",
+    "node-sass": "4.5.3",
+    "normalize.css": "7.0.0",
     "polyfill": "^0.1.0",
     "react": "^16.3.2",
     "react-addons-shallow-compare": "^15.6.0",
@@ -37,8 +40,8 @@
     "react-test-renderer": "^16.4.1",
     "react-transition-group": "1.x",
     "redux": "^4.0.0",
-    "sass-loader": "^7.0.1",
-    "style-loader": "^0.21.0",
+    "sass-loader": "6.0.6",
+    "style-loader": "0.18.2",
     "uuid": "^3.2.1",
     "validator": "^10.2.0",
     "webpack": "3.1.0",
