--- a/package.json
+++ b/package.json
@@ -52,5 +52,8 @@
   "devDependencies": {
     "jest": "^23.1.0",
     "webpack-bundle-analyzer": "^2.13.1"
+  }, 
+  "engines": {
+    "node": "8.11.1"
   }
 }
