--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "webpack-bundle-analyzer": "^2.13.1"
   }, 
   "engines": {
-    "node": "8.11.1"
+    "node": "8.11.1",
+    "yarn": "1.6.0"
   }
 }
