--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "moment": "^2.22.2",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
+    "numeral": "^2.0.6",
     "polyfill": "^0.1.0",
     "react": "^16.3.2",
     "react-addons-shallow-compare": "^15.6.0",
@@ -46,11 +47,11 @@
   },
   "devDependencies": {
     "chalk": "^2.4.1",
-    "jest": "^23.1.0",
-    "webpack-bundle-analyzer": "^2.13.1",
     "enzyme": "^3.3.0",
     "enzyme-to-json": "^3.3.4",
-    "react-test-renderer": "^16.4.1"
+    "jest": "^23.1.0",
+    "react-test-renderer": "^16.4.1",
+    "webpack-bundle-analyzer": "^2.13.1"
   },
   "engines": {
     "node": "8.11.1",
