--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "firebase": "5.4.0",
+    "history": "^4.7.2",
     "moment": "^2.22.2",
     "node-sass": "^4.5.3",
     "normalize.css": "7.0.0",
