--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-addons-shallow-compare": "^15.6.0",
     "react-dates": "^12.3.0",
     "react-dom": "^16.3.2",
+    "react-icons": "^3.0.5",
     "react-modal": "^3.4.4",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
