--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "indecision-app",
   "version": "1.0.0",
   "main": "index.js",
-  "author": "Andrew Mead",
+  "author": "Ragy Riad",
   "license": "MIT",
   "scripts": {
     "build:dev": "webpack",
